--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -42,46 +42,331 @@
 
 ## ==二.C++重难点==
 
-##### 1.介绍一下智能指针
+##### 1.排序
 
-+ 智能指针是一个类，这个类的构造函数中传入一个普通指针，析构函数中释放传入的指针。
+> 稳定：相同的元素排序前后排列顺序不变
+>
+> + 稳定：冒泡，插入，归并
+> + 不稳定：选择，希尔，快排，堆
 
-  >  智能指针的类都是栈上的对象，所以当函数（或程序）结束时会自动被释放
++ 冒泡：比较相邻元素，第一个比第二个大，就交换
++ 选择：每次找最小的，存放在起始位置，之后找第二小的，以此类推
++ 插入：斗地主摸牌插入手牌
+  + 第一个元素看做一个有序序列，把第二个元素到最后一个元素当成是未排序序列。从头到尾依次扫描未排序序列，将扫描到的每个元素插入有序序列的适当位置。
 
+<img src="../图片/面试3.png" width="500px" />
+
++ 归并排序：平均：$nlogn$，最好：$nlogn$，最坏：$nlogn$ ；空间：$n$
+
+  + 采用分治的思想，分而治之
+  + 分：递归拆分子序列的过程，递归深度为log2n。
+  + 治：将两个已经有序的子序列合并成一个有序序列
+
++ 快速排序：平均：$nlogn$，最好：$nlogn$，最坏：$n^2$；；空间：$log n$
+
+  + 从数列中挑出一个元素，称为 “基准”（pivot）;
+  + 重新排序数列，所有元素比基准值小的摆放在基准前面，所有元素比基准值大的摆在基准的后面。在这个分区退出之后，该基准就处于数列的中间位置。这个称为分区（partition）操作；
+  + 递归地（recursive）把小于基准值元素的子数列和大于基准值元素的子数列排序；
+
++ 堆排序：平均：$nlogn$，最好：$nlogn$，最坏：$nlogn$ ；空间：$1$
+
+  > 大顶堆：升序排列；小顶堆：降序排列；
+
+  + 创建一个最小堆：
+    + 使用数组来模拟堆的实现，先从最后一个非叶子结点开始 size()/2。从左至右，从下至上进行调整。当发现子结点比父节点大的时候就进行交换，知道根结点，这样就设计出了最小根堆。
+  + 把堆首（最大值）和堆尾互换；
+  + 把堆的尺寸缩小 1，重新调整成最小堆
+  + 知道堆的尺寸为1
+
+---
+
+##### 2.快排，归并，堆排序时间复杂度
+
++ 快排
+
+  <img src="../图片/面试5.png" style="zoom:20%;" />
+
+  <img src="../图片/面试6.png" style="zoom:20%;" />
+
++ 归并
+
+  <img src="../图片/面试7.png" style="zoom:30%;" />
+
++ 堆排序：初始化建堆：O(n)，排序重建堆：nlog(n)，总时间复杂度：O(n+nlogn)=O(nlogn)。
+
+  + 建堆： <img src="../图片/面试8.png" style="zoom:40%;" />
+  + 排序：每次都是从根节点往下循环查找，每一次时间是 logn，循环  n -1 次，总时间：logn(n-1) = nlogn  - logn
+
+  
+
+---
+
+##### 3.基数排序，计数排序，桶排序
+
+<div align = center><img src="../图片/面试9.png" style="zoom:50%;" /><img src="../图片/面试4.png" width="500px" /></div>
+
++ 计数排序：
+
+  + 核心在于将数据值转化为键，存储在额外开辟的数组空间中。要求输入的数据必须是有确定范围的整数。
+  + 步骤：
+    + 找出待排序数组中最大和最小的元素
+    + 统计数组中每个值为 i 的元素出现的次数，存入数组 C 的第 i 项
+    + 每一项 — 最小值作为数组C中的索引，次数+1，相当于存放在数组中：` ++ count[nums[i] - min_num];`
+    + 再进行反向填充
+
+  + 应用场景：
+    + 一年的全国高考考生人数为500 万，分数最低100 ，最高900 ，没有小数，你把这500 万元素的数组排个序
+      + 场景：10万个人按照年龄排序，每个年龄计数
+
++ 桶排序：计数排序的升级版。它利用了函数的映射关系
+
+  + 步骤：
+
+    + 按照数组分桶
+    + 将数组分入各个桶
+    + 将每个桶元素进行排序，拍完再返回
+
+  + 有10GB的订单数据，需按订单金额（假设金额都是正整数）进行排序，但内存有限，仅几百MB。
+
+    > 1. 扫描一遍文件，看订单金额所处数据范围，比如1元-10万元，那么就分100个桶。
+    >
+    > 2. 第一个桶存储金额1-1000元之内的订单，第二个桶存1001-2000元之内的订单，依次类推。
+    >
+    > 3. 每个桶对应一个文件，并按照金额范围的大小顺序编号命名（00，01，02，…，99）。
+    >
+    > 4. 将100个小文件依次放入内存并用快排排序。
+    >
+    > 5. 所有文件排好序后，只需按照文件编号从小到大依次读取每个小文件并写到大文件中即可。
+
++ 基数排序：将整数按位数切割成不同的数字，然后按每个位数分别比较。字符串和特定格式的浮点数也行
+  + 步骤：
+    + 按照个位数进行排序。
+    + 按照十位数进行排序。
+    + 按照百位数进行排序。
+  + 场景：手机号排序
+
+> - 计数排序：每个桶只存储单一键值；
+> - 桶排序：每个桶存储一定范围的数值；
+> - 基数排序：根据键值的每位数字来分配桶；
+
+---
+
+##### 4.单例模式
+
++ 确保某一个对象只有一个实例，而且自行实例化并向整个程序提供这个实例。
+
++ 实现方式：
+
+  + 饿汉模式：系统一运行就初始化创建实例，当需要时，直接调用即可。**（本身就线程安全，没有多线程的问题）**
+  + 懒汉模式：指系统运行中实例并不存在，需要使用该实例时才会去创建并使用实例。**（这种方式要考虑线程安全）**
+
+  > - 饿汉式是以空间换时间，适应于访问量较**大**时，或者线程比较多的的情况
+  > - 懒汉式是以时间换空间，适应于访问量较**小**时；推荐使用**内部静态变量的懒汉单例**，代码量少
+
++ 优缺点：
+
+  + 优点：
+    + 内存中只有一个实例，减少了内存开支，特别是一个对象需要频繁地创建、销毁时，而且创建或销毁时性能又无法优化，单例模式的优势就非常明显。
+    + 避免对资源的多重占用。如避免对同一个资源文件的同时写操作。
+  + 缺点：
+    + 单例模式一般没有接口，扩展困难。
+    + 不利于测试。
+
++ 应用场景：
+
+  + 应用程序的日志应用，一般都可以用单例模式实现，只能有一个实例去操作文件。
+  + 创建一个对象需要消耗的资源过多时，如数据库等资源，所以数据库连接池往往也是用单例模式
+
+---
+
+##### 5.工厂模式
+
++ 定义一个创建对象的接口，让其子类自己决定实例化哪一个产品类，工厂模式使其创建过程延迟到子类进行。
++  **简单工厂模式：**
+  + 又称静态工厂方法模式，它属于类创建型模式。在简单工厂模式中，可以根据参数的不同返回不同类的实例。
+  + 包含的角色：
+    +  **抽象产品类** ：所有对象的父类，负责描述所有实例所共有的公共接口
+    +  **具体产品类**：创建目标，所有创建的对象都充当这个角色的某个具体类的实例。
+    +  **工厂类：** ： 负责实现创建所有实例的内部逻辑
+  + 优缺点：
+    + 优点： 提供了专门的工厂类用于创建对象，客户端可以免除直接创建产品对象的责任，而仅仅“消费”产品
+    + 缺点： 扩展性非常差，新增产品的时候，需要去修改工厂类。
++  **工厂方法模式：**
+  + 在工厂方法模式中，核心的工厂类不再负责所有产品的创建，而是将具体创建工作交给子类去做。这个核心类仅仅负责给出具体工厂必须实现的接口，而不负责哪一个产品类被实例化这种细节。
+  + 包含的角色：
+    +  **抽象产品类** ：所有对象的父类，负责描述所有实例所共有的公共接口
+    +  **具体产品类**：具体工厂创建的类。
+    +  **抽象工厂类：** 工厂方法模式的核心类，提供创建具体产品的接口，由具体工厂类实现。
+    +  **具体工厂类：** ： 继承于抽象工厂，实现创建对应具体产品对象的方式。
+  + 优缺点：
+    + 优点：并不只是为了封装具体产品对象的创建，而是要把具体产品对象的创建放到具体工厂类实现
+    + 缺点：每新增一个产品，就需要增加一个对应的产品的具体工厂类。
++  **抽象工厂模式：**
+  + 提供一个创建一系列相关或相互依赖对象的接口，而无须指定它们具体的类。
+  + 包含的角色：
+    +  **抽象产品类** ：所有对象的父类，负责描述所有实例所共有的公共接口
+    +  **具体产品类**：具体工厂创建的类
+    +  **抽象工厂类：** 工厂方法模式的核心类，提供创建具体产品的接口，由具体工厂类实现。
+    +  **具体工厂类：** ： 继承于抽象工厂，实现创建对应具体产品对象的方式。
+  + 优缺点：
+    + 优点：提供一个接口，可以创建多个产品族中的产品对象。
+    + 缺点：每新增一个产品，就需要增加一个对应的产品的具体工厂类。
+
+> - 简单工厂模式，，需要去修改工厂类，这违背了开闭法则。
+> - 工厂方式模式和抽象工厂模式，都需要增加一个对应的产品的具体工厂类，这就会增大了代码的编写量。
+
+---
+
+##### 6.工厂模式加入模板类——模板工厂
+
++ 将抽象工厂与具体工厂都写成模板的形式
+
+---
+
+##### 7.C++ 中的类型转换
+
++ 隐式类型转换：隐式类型转换是自动执行的，无需显式的操作符。 
+  + 函数实参到形参的类型转换、函数返回值类型的自动转换等等。
++ 显示类型转换：
+  + 旧有的C风格的强制类型转换。这些不推荐，在代码中不显眼，容易被忽略， 而且实际上是困难且容易出错的。
+  + explicit关键字：声明为explicit的构造函数不能在隐式转换中使用，但只支持一个参数的构造函数
+  + 四种强制类型转换
+
+---
+
+##### 6.什么是向上类型转换，向下类型转换，以及什么是切割
+
++ 向上类型转换：是派生类向基类强制类型转换
+
++ 向下类型转换：基类向派生类的强制类型转换
++  切割：覆盖方法和子类数据丢失的现象生成切割(slice)；
+  + 在向上强制转换过程中，使用指针和引用不会造成切割，而使用直接赋值会造成切割。
+
+---
+
+##### 7.介绍一下四种强制类型转换
+
++ `const_cast <new_type> (expression)`
+
+  + 用于去出类型的 const / volatile 属性。目标类型必须与源类型相同。是唯一有此能力的转型操作符。
+
+    > 可以加上const属性，但很少用
+
++ `static_cast <new_type> (expression)`
+
+  + 运算符执行非动态转换，没有保证转换的安全性。例如，它可以用来把一个基类指针转换为派生类指针。可以将non-const转换为const，但无法添加。
+
++ `dynamic_cast <new_type> (expression)`
+
+  + 用来执行"安全项下"转型，即基类->派生类，用来决定某个对象是否归属继承体系的某个类型。只接受基于类对象的指针和引用的类转换。
+
+  + 使用dynamic_cast进行向下强制类型转换。使用此关键字有一下几个条件
+
+    + 必须有虚函数
+    + 必须有继承关系
+    + 必须打开编译器的运行阶段类型识别(Runtime Type Identification)开关
+
+    > 下行转换时，dynamic_cast具有类型检查的功能，比static_cast更安全。向上两者都一样
+
++ `reinterpret_cast <new_type> (expression)`
+
+  + 意图执行低级转换，比如将 pointer to int 类型转换为 int 。实际动作以及结果取决于编译器，说明不可移植。使用很少。
+
+> 除了dynamic_cast是运行时处理的，其余三个都是编译时完成的
+
+---
+
+##### 4.介绍一下智能指针
+
++ 原理：智能指针是一个类，这个类的构造函数中传入一个普通指针，析构函数中释放传入的指针。智能指针的类是栈上的对象，智能指针指向堆上开辟的空间，函数结束时，栈上的函数会自动被释放，智能指针指向的内存也会随之消失，防止内存泄漏。
 + C++ 11中新增了三个 智能指针： shared+ptr, unique_ptr, weak_ptr
+
 + 注意事项：
   + 构造函数是`explicit`的，即不能将内置指针隐式转换为智能指针
   + 内置指针构造智能指针时必须立即构造，禁止混合使用这两种指针
-+ 使用智能指针的三个情况：
-  + **不知道需要使用多少对象（容器）**
-  + **不知道所需对象的准确类型（多态）**
-  + **需在多个对象间共享数据**
 
 ---
 
-##### 2.介绍一下shared_ptr的使用
+##### 5.内存泄露与内存溢出的区别
+
++ 内存溢出：要求分配的内存超出了系统能提供的，系统不能满足要求，于是产生了溢出
++ 内存泄露：向系统申请的内存使用完不归还，new完不进行delete。无法再次利用
+
+---
+
+##### 5.智能指针需要实现的操作
+
++ 实现构造、析构、拷贝构造、操作符重载。
+
+##### 6.使用智能指针的三个情况：
+
++ **不知道需要使用多少对象（容器）**
++ **不知道所需对象的准确类型（多态）**
++ **需在多个对象间共享数据**
+
+---
+
+##### 7.介绍一下shared_ptr的使用
 
 + shared_ptr是基于引用计数的智能指针。当内存的引用计数为0的时候这个内存会被释放。
 + 最安全的分配和使用动态内存的方法是调用`make_shared`函数
++ 成员变量与成员函数
+  + 成员变量：计数器，指针
+  + 成员函数：
+    + `p.reset()`：如果是唯一指向，则释放对象，p置空
+    + `p.reset(q)`：令p指向内置指针q
+    + `p.reset(q,d)`：调用d而不是使用delete来释放q
+    + `p.get()`：返回内置指针
+    + `p.use_count()` :返回计数器的值
 
 ---
 
-##### 3.介绍一下 unique_ptr的使用
+##### 6.介绍一下 unique_ptr的使用
+
++ 没有类似`make_shared`的标准库函数返回一个unique_ptr，需要将其绑定在new返回的指针上
 
 + 与shared_ptr不同的是同一时刻只能有一个unique_ptr指向给定对象；
-+ 也不支持复制和赋值，直接赋值会编译出错。实在想赋值的话，需要使用：`std::move`。
++ 也不支持 **复制和赋值** ，直接赋值会编译出错。实在想赋值的话，需要使用：`std::move`。
+  + 构造时传入托管对象的指针，析构时delete对象
+  + 禁用赋值函数
++ 成员变量与成员函数
+  + 成员变量：指针
+  + 成员函数：
+    + `u.release()`：u放弃指针的控制权，返回指针并将u置空
+    + `u.reset()`：释放u指向的对象
+    + `u.reset(q)`：指向内置指针q
+    + 转移unique_ptr的所有权：`unique_ptr<string> p2(p1.release())`或者`p3.reset(p2.release)`
+    + `p.get()`：返回内置指针
 
 ---
 
-##### 4.介绍一下 weak_ptr 的使用
+##### 7.介绍一下 weak_ptr 的使用
 
-+ 是一种不控制指向对象生存期的智能指针，它指向一个由shared_ptr管理的对象
-+ weak_ptr绑定到shared_ptr指向的对象时，不会改变引用计数，一旦对象shared_ptr的引用计数清零，对象就会被释放，即使有weak_ptr指向它。
++ 指向一个由shared_ptr管理的对象，不控制指向对象的生存期
+
++ weak_ptr绑定到shared_ptr指向的对象时，不会改变引用计数，一旦对象shared_ptr的引用计数清零，对象就会被释放
+
 + 由于weak_ptr的对象可能不存在，所以不能用weak_ptr直接访问对象，可以用lock函数先检查指向对象是否存在，若存在则返回指向该对象的shared_ptr，不存在则返回空的shared_ptr
 
+  ```c++
+  auto p = make_shared<int>(42);
+  weak_ptr<int> wp(p);
+  if(shared_ptr<int> np = wp.lock()) {
+    	//np与p共享对象
+  }
+  ```
+
++ 成员函数与成员变量
+
+  + 成员变量：指针，计数器
+  + `w.reset()`：释放w指向的对象
+  + `w.use_count()` :返回计数器的值
+  + `w.expired()` :若计数器的值为0，返回true
+  + `w.lock()` :若计数器的值为0，返回一个空的shared_ptr;否则返回一个指向w对象的shared_ptr
+
 ---
 
-##### 5.智能指针的线程安全问题你知道吗？
+##### 8.智能指针的线程安全问题你知道吗？
 
 + 智能指针有2个成员，引用计数是原子类型的，但原始指针并不是；所以综合来说就不是线程安全的。
 
@@ -89,36 +374,97 @@
 
 ---
 
-##### 6.怎么解决智能指针出现的循环引用问题
+##### 9.怎么解决智能指针出现的循环引用问题
 
 + 循环引用就是：两个对象互相使用一个shared_ptr成员变量指向对方。可能会出现类似于死锁的现象
 + 弱指针用于专门解决shared_ptr循环引用的问题，weak_ptr的存在与否并不影响对象的引用计数器。
 
 ---
 
-##### 7.介绍一下什么是右值
+##### 10.你知道哪些构造函数？
+
+- **默认构造函数**
+- **初始化构造函数（有参数）**
+- **拷贝构造函数**
+- **移动构造函数（move和右值引用）**
+- **委托构造函数** ：比如初始化委托给了默认构造函数，然后执行定义在函数体中的内容。
+- **转换构造函数** ：将其他类型的变量，隐式转换为本类对象
+
+举个例子：
+
+```c++
+#include <iostream>
+using namespace std;
+
+class Student{
+public:
+    Student(){//默认构造函数，没有参数
+        this->age = 20;
+        this->num = 1000;
+    };  
+    Student(int a, int n):age(a), num(n){}; //初始化构造函数，有参数和参数列表
+    Student(const Student& s){//拷贝构造函数，这里与编译器生成的一致
+        this->age = s.age;
+        this->num = s.num;
+    }; 
+    Student(int r){   //转换构造函数,形参是其他类型变量，且只有一个形参
+        this->age = r;
+        this->num = 1002;
+    };
+  	Student(std::istream &is) : Student() {//委托构造函数，他委托给了默认构造函数。当这些受委托的构造函数执行完后，接着执行istream&构造函数体的内容。
+      	read(is, *this);
+    }
+    ~Student(){}
+public:
+    int age;
+    int num;
+};
+
+int main(){
+    Student s1;
+    Student s2(18,1001);
+    int a = 10;
+    Student s3(a);
+    Student s4(s3);
+
+    printf("s1 age:%d, num:%d\n", s1.age, s1.num);
+    printf("s2 age:%d, num:%d\n", s2.age, s2.num);
+    printf("s3 age:%d, num:%d\n", s3.age, s3.num);
+    printf("s2 age:%d, num:%d\n", s4.age, s4.num);
+    return 0;
+}
+//运行结果
+//s1 age:20, num:1000
+//s2 age:18, num:1001
+//s3 age:10, num:1002
+//s2 age:10, num:1002
+```
+
+---
+
+##### 11.介绍一下什么是右值
 
 + 左值：可以出现在 = 左边的值
 + 右值：只能出现在 = 右边的值；如临时对象
 
 ---
 
-##### 8.什么是右值引用
+##### 12.什么是右值引用
 
 + `右值引用` 通过`&&`来 必须绑定 `右值` 的引用，
   + 右值引用只能绑定将要被销毁的对象，故可将右值引用的资源安全地移动到另一个对象
 
 ---
 
-##### 9.std::move 怎么使用？
+##### 13.std::move 怎么使用？
 
 + `std::move`函数可将左值显式转换为它对应的右值引用类型。处理完后，除对它赋值或销毁外，不可再使用它的值。
 
 ---
 
-##### 10.什么是移动构造函数
+##### 14.什么是移动构造函数
 
-+ 代码构造和拷贝构造函数类似，但是内存的处理不是拷贝而是转移。注意参数类型是右值引用。
++ 代码构造和拷贝构造函数类似，但是内存的处理不是拷贝而是转移。参数类型是右值引用。
 
 - 移动构造函数的参数，移动构造函数的初值是一个右值引用 &&。往往是利用浅拷贝进行实现。
   - 拷贝构造函数的参数是左值引用，函数体往往是利用深拷贝进行实现。
@@ -126,13 +472,13 @@
   - vector::push_back使用std::move提高性能
     + 直接把传来的资源利用浅拷贝给偷过来，减少了开销
 
-##### 11.介绍一下 lambda 表达式
+##### 15.介绍一下 lambda 表达式
 
 + 是一个可调用的代码单元，也就是一个未命名的`内联函数`。它有捕获列表、返回类型、形参列表、函数体，可定义在函数内部
   + `[capture list](parameter list) -> return type {function body}`
 + `lambda实际是匿名类`：定义lambda时，编译器生成一个与其对应的未命名的类类型
 
-##### 12.介绍一下 bind 使用
+##### 16.介绍一下 bind 使用
 
 
 
@@ -468,6 +814,7 @@ lst.erase_after(b,e);		//删除 [b,e) 之间的元素
   + 每个叶结点都是黑的
   + 如果一个结点是红的，那么它的两个儿子都是黑的
   + 对于任意结点而言，从一个节点到该节点的子孙节点的所有路径上包含相同数目的黑节点。
++ 红黑树性能比较高，插入删除时间复杂度保持在logn。和AVL相比，要求不是那么严格，它只要求到叶节点的最长路径不超过最短路径的两倍。相比之下，AVL要求左右子树相差高度不超过一，简单的插入或者删除都会导致树的不平衡需要旋转操作。
 + 对红黑树进行插入和删除等操作时，可能会破坏红黑树的性质 。 可以通过对结点进行重新着色，以及对树进行相关的旋转操作，修改树中某些结点的颜色及指针结构，来达到操作后继续保持性质或平衡的目的 。
 
 ##### 2.哈希表
@@ -1049,11 +1396,147 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 ---
 
+## 五.C++ 11线程编程先关
 
+##### 1.为什么使用并发
+
++ 任务拆分：
+  + 将相关的代码放在一起，将无关的代码分开，能够让程序更加容易理解和测试。
+  + 将程序划分成不同的任务，每个线程执行一个任务或者多个任务，可以将整个程序的逻辑变得更加简单。
++ 提高性能：
+  +  **任务并行(task parallelism)** ：将一个单个任务分成若干个部分各自并行运行，从而降低运行时间。如果各个部分关联很大，如一个部分的执行需要另一个任务的执行结果，这个时候并不能很好的并行完成。
+  + **数据并行(data parallelism)**：每个线程在不同的数据部分上执行相同的操作。
 
 ---
 
-## 五.WebServer项目相关
+##### 2.介绍一下 join与datach
+
++ join：主线程会在join处一直阻塞，直到子线程完成，`join()`另一个任务是回收该线程中使用的资源。
+
++ detach：将线程放在后台运行，所有权和控制权被转交给`C++`运行时库，以确保与线程相关联的资源在线程退出后能被正确的回收。这种被分离的线程被称为**守护线程(daemon threads)**。
+
+  > 线程被分离之后，即使该线程对象被析构了，线程还是能够在后台运行，只是由于对象被析构了，主线程不能够通过对象名与这个线程进行通信。
+
++ 线程一旦被分离就不能够再被`join`了。可以使用`joinable()`函数判断一个线程对象能否调用`join()`。
+
+---
+
+##### 3.线程的构造函数可调用对象可以是以下几种情况：
+
+- 函数指针（不支持重载）
+
+- 重载了`operator()`运算符的类对象，即仿函数
+
+  ```c++
+  class Fctor {// 仿函数
+  public:
+      void operator() () { }// 具有一个参数
+  };
+  Fctor f;
+  std::thread t1(f);  
+  // std::thread t2(Fctor()); // 编译错误;如果重载的operator()运算符有参数，就不会发生上面的错误
+  std::thread t3((Fctor())); // ok
+  std::thread t4{Fctor()}; // ok
+  ```
+
+- `lambda`表达式（匿名函数）
+
+- `std::function`
+
+  ```c++
+  class A{
+  public:
+      void func1(){}
+      void func2(int i){ }
+      void func3(int i, int j){}
+  };
+  A a;
+  std::function<void(void)> f1 = std::bind(&A::func1, &a);
+  std::function<void(void)> f2 = std::bind(&A::func2, &a, 1);
+  std::function<void(int)> f3 = std::bind(&A::func2, &a, std::placeholders::_1);
+  std::function<void(int)> f4 = std::bind(&A::func3, &a, 1, std::placeholders::_1);
+  std::function<void(int, int)> f5 = std::bind(&A::func3, &a, std::placeholders::_1, std::placeholders::_2);
+  
+  std::thread t1(f1);
+  std::thread t2(f2);
+  std::thread t3(f3, 1);
+  std::thread t4(f4, 1);
+  std::thread t5(f5, 1, 2);
+  ```
+
+---
+
+##### 4.怎么往线程中传入引用
+
++ 内部调用的线程函数其实是一个副本，所以如果在函数内部修改了类成员，并不会影响到外面的对象。
++ 如果真正传引用，在调用线程类构造函数时，用`std::ref()`包装一下。
+
+---
+
+##### 5.线程对象只能移动不可复制
+
++ 线程之间的所有权转换方式：`std::move`
+
+---
+
+##### 6.什么是RAII(Resource Acquisition Is Initialization)技术？
+
++  **获取资源即初始化技术** 在构造函数中创建资源，在析构函数中释放资源，就算发生了异常也能保证析构函数能够执行
+
+  ```c++
+  class MutexLockGuard{
+  public:
+    explicit MutexLockGuard(std::mutex& mutex): mutex_(mutex){
+      	mutex_.lock();
+    }
+    ~MutexLockGuard(){
+      	mutex_.unlock();
+    }
+  private:
+    std::mutex& mutex_;
+  };
+  ```
+
++ `c++`库已经提供了`std::lock_guard`类模板 `std::lock_guard<std::mutex> guard(mu);`
+
+---
+
+##### 7.lock_guard 与 unique_lock 区别
+
++ 一个函数内部有两段代码需要进行保护，使用`lock_guard`就需要创建两个局部对象来管理同一个互斥锁
+  + unique_lock需要维护锁的状态，效率要比`lock_guard`低一点
++ `unique_lock` 提供了`lock()`和`unlock()`接口，能记录现在处于上锁还是没上锁状态，在析构的时候会自动解锁
+  + 使用`std::defer_lock`设置初始化时不进行的上：`unique_lock<mutex> guard(_mu, defer_lock);`
++ `unique_lock`和`lock_guard`都不能复制，`lock_guard`不能移动，但是`unique_lock`可以
+
+---
+
+##### 8.关于死锁
+
++ 出现死锁：一对线程中每一个都需要同时锁定两个互斥元来执行一些操作，而且每个线程都已经获得了一个互斥元，同时等待对方的，则会出现死锁。
+
++ 解决方式：
+
+  + 使用`std::lock()` 函数可以同时锁定两个或者更多的互斥元，而没有死锁的风险。
+
+  + 构造两个`std::lock_guard<std::mutex>`实例，并提供`std::adopt_lock`参数给互斥元
+
+    > lock_guard内部就有析构函数来unlock，所以在lock_guard中引用std::adopt_lock参数（作用是告诉编译器我已经lock过了，不需要再重复lock了）
+
+---
+
+##### 9.条件变量的介绍
+
+> `c++11`中提供了`#include <condition_variable>`头文件
+
++ `std::condition_variable`可以和`std::mutex`结合一起使用，其中有两个重要的接口，`notify_one()`和`wait()`
+  + `wait()`可以让线程陷入**休眠状态**
+  + `notify_one()`就是**唤醒**处于`wait`中的**其中一个条件变量**
+  + `notify_all()`同时唤醒所有处于`wait`状态的条件变量。
+
+---
+
+## 六.WebServer项目相关
 
 * 利用正则与状态机解析HTTP请求报文，实现处理静态资源的请求；
 * 利用标准库容器封装char，实现自动增长的缓冲区；
@@ -1146,22 +1629,6 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 ---
 
-##### 6.C++11 多线程使用
-
-
-
-
-
----
-
-##### 7.C++11 锁你知道哪些，有什么区别？
-
-
-
-
-
----
-
 ##### 8.如何设计一个多线程下安全的队列，实现生产者消费者问题
 
 ```c++
@@ -1172,8 +1639,6 @@ struct Pool {
   std::queue<int> value;
 };
 ```
-
----
 
 ##### 9.你是怎么设计线程池的？
 
@@ -1278,7 +1743,7 @@ for(int i = 1; i < subMatch.size(); ++ i) {
 
 ---
 
-## 六.实习事项
+## 七.实习事项
 
 ### 物理层小基站项目功能及其自己负责的部分
 
@@ -1488,7 +1953,13 @@ for(int i = 1; i < subMatch.size(); ++ i) {
 
 ---
 
-##### 6. **gcc 与 g++ 的区别？**
+##### 6.多个动态库的连接顺序有区别吗，顺序怎么排
+
++ gcc中库的链接顺序是从右往左进行，所以要把最基础实现的库放在最后，这样左边的lib就可以调用右边的lib中的代码。这样才能避免undefined reference的错误，完成编译链接。
+
+---
+
+##### 7. **gcc 与 g++ 的区别？**
 
 - 从文件角度：
   - 后缀为 .c 的， gcc 把它当作是C程序， g++当作是C++程序；
@@ -1621,6 +2092,33 @@ for(int i = 1; i < subMatch.size(); ++ i) {
 
 ### Makefile
 
+##### 1.为什么使用Makefile？
+
++ makefile记录了整个项目工程的所有需要编译的文件列表，在编译时仅需要输入简单的make命令就能编译出结果。
++ makefile文件反映了整个项目中各个模块的依赖关系，当改动了某些源文件后，仅需简单的输入make命令，make工具就会根据makefile文件里描述的依赖关系帮助我们分析哪些模块需要重新编译，并执行相应的操作。
+
+##### 2.简单的Makefile语法
+
+```makefile
+target:prerequisites
+<tab> command1
+<tab> command2
+.....
+<tab> commandN
+```
+
+
+
+
+
+
+
+---
+
+## 八.智力题
+
+
+
 
 
 
@@ -1631,21 +2129,7 @@ for(int i = 1; i < subMatch.size(); ++ i) {
 
 ---
 
-## 七.智力题
-
-
-
-
-
-
-
-
-
-
-
----
-
-## 八.综合面试
+## 九.综合面试
 
 楼层丢鸡蛋
 
