--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -6,11 +6,6 @@
 + 给一个字符串，输出最长连续子串。
 + n的所有最小因数集合，如8，其最小质数集合为{1,2,2,2}
 + 手撕 unique_pointer
-+ 布隆过滤器
-+ hash表解决冲突的方法
-+ 红黑树性质
-+ redis中的数据结构
-+ 跳表插入删除过程
 + 去掉字符串开头和末尾的空格
 + 大数相加
 + 最长公共子序列LCS
@@ -24,7 +19,6 @@
 + 设计题，快速找出所有微信关系里的单向好友
 + 一个字符串ajxnhdbdosjbsorange,模式“o*ge”,找到匹配的最小字符串下标范围。
 + hashfunc一般怎么实现(除法散列，乘法散列 等等)
-+ hashmap发生冲突怎么解决([链表](https://www.nowcoder.com/jump/super-jump/word?word=链表)法、开放寻址法等等)
 + 1亿个数怎么找中位数(哈希分组，然后快排寻找)
 + 一个字符串，比如abc123/f/ecd,连续的数字或者连续的字母，或者反斜杠后和后面一个字符，视为一个整体，反转之。比如这时输出应该是cd/e/f123abc.(一开始用了栈来做，非常简单。然后面试官问有没有其他方法，我就说一个先分段反转再整体反转的原地做法。
 + 开放寻址法要如何查找一个元素
@@ -33,10 +27,6 @@
 + 给定n个正整数，如何找出最小的K个正整数 
 + 给定一组整数1000以内，如何高效去除重复的数
 + 字符串中查找是否有子串，写完以后要求给出测试用例
-
-
-
-
 
 ---
 
@@ -244,7 +234,7 @@
 
 ---
 
-##### 7.介绍一下四种强制类型转换
+##### 8.介绍一下四种强制类型转换
 
 + `const_cast <new_type> (expression)`
 
@@ -276,7 +266,7 @@
 
 ---
 
-##### 4.介绍一下智能指针
+##### 9.介绍一下智能指针
 
 + 原理：智能指针是一个类，这个类的构造函数中传入一个普通指针，析构函数中释放传入的指针。智能指针的类是栈上的对象，智能指针指向堆上开辟的空间，函数结束时，栈上的函数会自动被释放，智能指针指向的内存也会随之消失，防止内存泄漏。
 + C++ 11中新增了三个 智能指针： shared+ptr, unique_ptr, weak_ptr
@@ -287,18 +277,18 @@
 
 ---
 
-##### 5.内存泄露与内存溢出的区别
+##### 10.内存泄露与内存溢出的区别
 
 + 内存溢出：要求分配的内存超出了系统能提供的，系统不能满足要求，于是产生了溢出
 + 内存泄露：向系统申请的内存使用完不归还，new完不进行delete。无法再次利用
 
 ---
 
-##### 5.智能指针需要实现的操作
+##### 11.智能指针需要实现的操作
 
 + 实现构造、析构、拷贝构造、操作符重载。
 
-##### 6.使用智能指针的三个情况：
+##### 12.使用智能指针的三个情况：
 
 + **不知道需要使用多少对象（容器）**
 + **不知道所需对象的准确类型（多态）**
@@ -306,7 +296,7 @@
 
 ---
 
-##### 7.介绍一下shared_ptr的使用
+##### 13.介绍一下shared_ptr的使用
 
 + shared_ptr是基于引用计数的智能指针。当内存的引用计数为0的时候这个内存会被释放。
 + 最安全的分配和使用动态内存的方法是调用`make_shared`函数
@@ -318,13 +308,15 @@
     + `p.reset(q,d)`：调用d而不是使用delete来释放q
     + `p.get()`：返回内置指针
     + `p.use_count()` :返回计数器的值
++ 使用场景：
+  + 有多个使用者共同使用同一个对象，而这个对象没有一个明确的拥有者；
+  + 对象的复制操作很费时,同时又需要在函数间传递对象, 我们往往会选择传递指向这个对象的指针来代替传递对象本身
 
 ---
 
-##### 6.介绍一下 unique_ptr的使用
+##### 14.介绍一下 unique_ptr的使用
 
 + 没有类似`make_shared`的标准库函数返回一个unique_ptr，需要将其绑定在new返回的指针上
-
 + 与shared_ptr不同的是同一时刻只能有一个unique_ptr指向给定对象；
 + 也不支持 **复制和赋值** ，直接赋值会编译出错。实在想赋值的话，需要使用：`std::move`。
   + 构造时传入托管对象的指针，析构时delete对象
@@ -337,10 +329,12 @@
     + `u.reset(q)`：指向内置指针q
     + 转移unique_ptr的所有权：`unique_ptr<string> p2(p1.release())`或者`p3.reset(p2.release)`
     + `p.get()`：返回内置指针
++ 使用场景：
+  + 同一时刻只能有一个使用者使用同一个对象时
 
 ---
 
-##### 7.介绍一下 weak_ptr 的使用
+##### 15.介绍一下 weak_ptr 的使用
 
 + 指向一个由shared_ptr管理的对象，不控制指向对象的生存期
 
@@ -363,10 +357,14 @@
   + `w.use_count()` :返回计数器的值
   + `w.expired()` :若计数器的值为0，返回true
   + `w.lock()` :若计数器的值为0，返回一个空的shared_ptr;否则返回一个指向w对象的shared_ptr
+  
++ 使用场景：
+
+  + 不需要控制对象的生存期，为了防止循环引用问题的出现。
 
 ---
 
-##### 8.智能指针的线程安全问题你知道吗？
+##### 16.智能指针的线程安全问题你知道吗？
 
 + 智能指针有2个成员，引用计数是原子类型的，但原始指针并不是；所以综合来说就不是线程安全的。
 
@@ -374,14 +372,45 @@
 
 ---
 
-##### 9.怎么解决智能指针出现的循环引用问题
+##### 17.怎么解决智能指针出现的循环引用问题
 
 + 循环引用就是：两个对象互相使用一个shared_ptr成员变量指向对方。可能会出现类似于死锁的现象
+
+```c++
+class Parent;
+
+class Child {
+public:
+    weak_ptr<Parent> father;//解决循环引用
+    ~Child() {std::cout << "bye child" << std::endl;}
+};
+class Parent {
+public:
+    shared_ptr<Child> son;
+    ~Parent() {std::cout << "bye parent" << std::endl;}
+};
+int main() {
+    shared_ptr<Parent> p(new Parent());  // 1  资源A
+    shared_ptr<Child> c(new Child());  // 2   资源B
+    p->son = c;     // 3      c.use_count() == 2 and p.use_count() == 1
+    c->father = p;    //  4   c.use_count() == 2 and p.use_count() == 1
+    std::cout << "finished" << std::endl;
+}
+/*
+         循环引用情况
+         shared_ptr<Parent> p(new Parent());  // 1  资源A
+        shared_ptr<Child> c(new Child());  // 2   资源B
+        p->son = c;     // 3      c.use_count() == 2 and p.use_count() == 1
+        c->father = p;    //  4   c.use_count() == 2 and p.use_count() == 2
+ */
+
+```
+
 + 弱指针用于专门解决shared_ptr循环引用的问题，weak_ptr的存在与否并不影响对象的引用计数器。
 
 ---
 
-##### 10.你知道哪些构造函数？
+##### 18.你知道哪些构造函数？
 
 - **默认构造函数**
 - **初始化构造函数（有参数）**
@@ -442,27 +471,27 @@ int main(){
 
 ---
 
-##### 11.介绍一下什么是右值
+##### 19.介绍一下什么是右值
 
 + 左值：可以出现在 = 左边的值
 + 右值：只能出现在 = 右边的值；如临时对象
 
 ---
 
-##### 12.什么是右值引用
+##### 20.什么是右值引用
 
 + `右值引用` 通过`&&`来 必须绑定 `右值` 的引用，
   + 右值引用只能绑定将要被销毁的对象，故可将右值引用的资源安全地移动到另一个对象
 
 ---
 
-##### 13.std::move 怎么使用？
+##### 21.std::move 怎么使用？
 
 + `std::move`函数可将左值显式转换为它对应的右值引用类型。处理完后，除对它赋值或销毁外，不可再使用它的值。
 
 ---
 
-##### 14.什么是移动构造函数
+##### 22.什么是移动构造函数
 
 + 代码构造和拷贝构造函数类似，但是内存的处理不是拷贝而是转移。参数类型是右值引用。
 
@@ -472,13 +501,13 @@ int main(){
   - vector::push_back使用std::move提高性能
     + 直接把传来的资源利用浅拷贝给偷过来，减少了开销
 
-##### 15.介绍一下 lambda 表达式
+##### 23.介绍一下 lambda 表达式
 
 + 是一个可调用的代码单元，也就是一个未命名的`内联函数`。它有捕获列表、返回类型、形参列表、函数体，可定义在函数内部
   + `[capture list](parameter list) -> return type {function body}`
 + `lambda实际是匿名类`：定义lambda时，编译器生成一个与其对应的未命名的类类型
 
-##### 16.介绍一下 bind 使用
+##### 24.介绍一下 bind 使用
 
 
 
@@ -808,14 +837,23 @@ lst.erase_after(b,e);		//删除 [b,e) 之间的元素
 ##### 1.红黑树基础介绍
 
 + 红黑树是一种二叉查找树，但在每个结点上增加一个存储位表示结点的颜色，可以是 Red或 Black。 通过对任何一条从根到叶子的路径上各个结点着色方式的限制，确保没有一条路径会比其他路径长出两倍，因而是接近平衡的。
+
 + 红黑树在二叉查找树的基础上增加了着色和相关的性质使得红黑树相对平衡，保证了一棵 n 个结点的红黑树始终保持了 Iogn 的高度，从而保证了红黑树的查找 、 插入、删除的时间复杂度最坏为 O(logn)。性质如下：
   + 每个结点要么是红的要么是黑的
   + 根结点是黑的
   + 每个叶结点都是黑的
   + 如果一个结点是红的，那么它的两个儿子都是黑的
   + 对于任意结点而言，从一个节点到该节点的子孙节点的所有路径上包含相同数目的黑节点。
-+ 红黑树性能比较高，插入删除时间复杂度保持在logn。和AVL相比，要求不是那么严格，它只要求到叶节点的最长路径不超过最短路径的两倍。相比之下，AVL要求左右子树相差高度不超过一，简单的插入或者删除都会导致树的不平衡需要旋转操作。
-+ 对红黑树进行插入和删除等操作时，可能会破坏红黑树的性质 。 可以通过对结点进行重新着色，以及对树进行相关的旋转操作，修改树中某些结点的颜色及指针结构，来达到操作后继续保持性质或平衡的目的 。
+  
++ 红黑树性能比较高，插入删除时间复杂度保持在logn。和AVL相比，要求不是那么严格，它只要求到叶节点的最长路径不超过最短路径的两倍。
+
+  > 场景：插入删除频繁。Nginx用红黑树管理定时器，EPOLL用红黑树管理监听的事件。
+
++ AVL：要求左右子树相差高度不超过一，简单的插入或者删除都会导致树的不平衡需要旋转操作，维护这种高度平衡所付出的代价比从中获得的效率收益还大。
+
+  > 应用：场景中对插入删除不频繁，只是对查找要求较高，AVL更好。 **Windows NT内核中广泛存在**
+
++ 至于普通的二叉搜索树，可能出现瘸腿现象，展现为链表，时间复杂度为 n 。
 
 ##### 2.哈希表
 
@@ -1746,6 +1784,29 @@ for(int i = 1; i < subMatch.size(); ++ i) {
 ## 七.实习事项
 
 ### 物理层小基站项目功能及其自己负责的部分
+
+##### 1.实现负责内容，物理层开发是什么
+
+
+
+
+
+##### 2.怎么进行修改的
+
+
+
+##### 3.VScode如何进行debug
+
++ 创建 Launch.json 文件与tasks.json文件
++ 配置launch.json中的`configurations` 中的 `program` , `agrs`等选项， 以及 tasks中的`tasks`配置
++ 配置完就可以可视化进行调试
+
+JSON 语法是 JavaScript 对象表示语法的子集。
+
+- 数据在名称/值对中
+- 数据由逗号分隔
+- 大括号 **{}** 保存对象
+- 中括号 **[]** 保存数组，数组可以包含多个对象
 
 
 
