--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -268,7 +268,7 @@
 
 ##### 9.介绍一下智能指针
 
-+ 原理：智能指针是一个类，这个类的构造函数中传入一个普通指针，析构函数中释放传入的指针。智能指针的类是栈上的对象，智能指针指向堆上开辟的空间，函数结束时，栈上的函数会自动被释放，智能指针指向的内存也会随之消失，防止内存泄漏。
++ 原理：智能指针是一个类，通过在构造函数中传入一个普通指针，析构函数中释放传入的指针。智能指针的类是栈上的对象，智能指针指向堆上开辟的空间，函数结束时，栈上的函数会自动被释放，智能指针指向的内存也会随之消失，防止内存泄漏。
 + C++ 11中新增了三个 智能指针： shared+ptr, unique_ptr, weak_ptr
 
 + 注意事项：
@@ -298,7 +298,7 @@
 
 ##### 13.介绍一下shared_ptr的使用
 
-+ shared_ptr是基于引用计数的智能指针。当内存的引用计数为0的时候这个内存会被释放。
++ shared_ptr是基于引用计数的智能指针，多个使用者操控一个对象。当引用计数为0时内存被释放
 + 最安全的分配和使用动态内存的方法是调用`make_shared`函数
 + 成员变量与成员函数
   + 成员变量：计数器，指针
@@ -317,7 +317,7 @@
 ##### 14.介绍一下 unique_ptr的使用
 
 + 没有类似`make_shared`的标准库函数返回一个unique_ptr，需要将其绑定在new返回的指针上
-+ 与shared_ptr不同的是同一时刻只能有一个unique_ptr指向给定对象；
++ 同一时刻只能有一个unique_ptr指向给定对象；
 + 也不支持 **复制和赋值** ，直接赋值会编译出错。实在想赋值的话，需要使用：`std::move`。
   + 构造时传入托管对象的指针，析构时delete对象
   + 禁用赋值函数
@@ -501,17 +501,112 @@ int main(){
   - vector::push_back使用std::move提高性能
     + 直接把传来的资源利用浅拷贝给偷过来，减少了开销
 
-##### 23.介绍一下 lambda 表达式
+---
 
-+ 是一个可调用的代码单元，也就是一个未命名的`内联函数`。它有捕获列表、返回类型、形参列表、函数体，可定义在函数内部
-  + `[capture list](parameter list) -> return type {function body}`
-+ `lambda实际是匿名类`：定义lambda时，编译器生成一个与其对应的未命名的类类型
+##### 23.vector的内存管理
 
-##### 24.介绍一下 bind 使用
++ v.size()：获得容器中有多少元素
++ v.capacity()：获得容器在它已经分配的内存中可以容纳多少元素 
++ v.resize(Container::size_type n)：强制把容器改为容纳 n个元素
+  + n 小于size，容器尾部的元素会被销毁
+  + n 大于size，新默认构造的元素会添加到容器尾部。 如果 n 大于capacity，在元素加入之前会进行重新分配 
++ v.reserve(Container::size_type n)：强制容器把它的容量改为不小于n，不影响size
+  + 小于等于当前capacity时，reserve什么都不做
+  + 大于当前capacity时，reserve扩张容量
 
+- v.shrink_to_fit()：C++11方法，要求vector/string/deque退回多余的空间，但具体实现可忽略此要求。不保证能退回
 
+vector采用的`内存扩张策略`一般是：在每次需要分配新空间时，将当前容量翻倍。但具体实现可使用不同策略
 
+---
 
+##### 24. vector的迭代器类型与数据成员
+
++ 迭代器类型： `Random Access Iterator` 
++ 数据成员：三个迭代器(指针) `first,last,end`
+
+---
+
+##### 25. 介绍一下 deque
+
++ `std::deque` （ double-ended queue ，双端队列）是有下标顺序容器，它允许在其首尾两段快速插入及删除。另外，在 deque 任一端插入或删除不会非法化指向其余元素的指针或引用。
+
+---
+
+##### 26. 与vector比有什么优势
+
++ 与 `std::vector` 相反， deque 的元素不是相接存储的：典型实现用单独分配的固定大小数组的序列，外加额外的登记，这表示下标访问必须进行二次指针解引用，与之相比 vector 的下标访问只进行一次。
++ deque 的存储按需自动扩展及收缩。扩张 deque 比扩张vector更优，因为它不涉及到复制既存元素到新内存位置。
+
+---
+
+##### 27. deque的迭代器类型与数据成员：
+
++ 迭代器类型： `Random Access Iterator`
++ 数据成员：一个迭代器，内部拥有四个指针 `head, tail, cur, node`
+
+---
+
+##### 28.关联容器
+
+实现在C++中，set 和 map 分别提供了以下三种数据结构，其底层实现以及优劣如下表所示：
+
+| 集合                 | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率   | 增删效率   |
+| -------------------- | -------- | -------- | ---------------- | ------------ | ---------- | ---------- |
+| `std::set`           | 红黑树   | 有序     | 否               | 否           | $O(log_n)$ | $O(log_n)$ |
+| `std::multiset`      | 红黑树   | 有序     | 是               | 否           | $O(log_n)$ | $O(log_n)$ |
+| `std::unordered_set` | 哈希表   | 无序     | 否               | 否           | $O(1)$     | $O(1)$     |
+
+`std::unordered_set`底层实现为哈希表，`std::set` 和`std::multiset` 的底层实现是红黑树， **红黑树是一种平衡二叉搜索树，所以key值是有序的，但key不可以修改，改动key值会导致整棵树的错乱，所以只能删除和增加。**
+
+| 映射                 | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率   | 增删效率   |
+| -------------------- | -------- | -------- | ---------------- | ------------ | ---------- | ---------- |
+| `std::map`           | 红黑树   | Key有序  | key不可重复      | key不可修改  | $O(log_n)$ | $O(log_n)$ |
+| `std::multimap`      | 红黑树   | Key有序  | key可重复        | key不可修改  | $O(log_n)$ | $O(log_n)$ |
+| `std::unordered_map` | 哈希表   | Key无序  | key不可重复      | key不可修改  | $O(1)$     | $O(1)$     |
+
+`std::unordered_map` 底层实现为哈希表，`std::map` 和`std::multimap` 的底层实现是红黑树。同理，`std::map` 和`std::multimap` 的key也是有序的（这个问题也经常作为面试题，考察对语言容器底层的理解）。
+
+当我们要使用集合来解决哈希问题的时候，优先使用unordered_set，因为它的查询和增删效率是最优的，如果需要集合是有序的，那么就用set，如果要求不仅有序还要有重复数据的话，那么就用multiset。
+
+##### 1.红黑树基础介绍
+
++ 红黑树是一种二叉查找树，但在每个结点上增加一个存储位表示结点的颜色，可以是 Red或 Black。 通过对任何一条从根到叶子的路径上各个结点着色方式的限制，确保没有一条路径会比其他路径长出两倍，因而是接近平衡的。
+
++ 红黑树在二叉查找树的基础上增加了着色和相关的性质使得红黑树相对平衡，保证了一棵 n 个结点的红黑树始终保持了 Iogn 的高度，从而保证了红黑树的查找 、 插入、删除的时间复杂度最坏为 O(logn)。性质如下：
+
+  + 每个结点要么是红的要么是黑的
+  + 根结点是黑的
+  + 每个叶结点都是黑的
+  + 如果一个结点是红的，那么它的两个儿子都是黑的
+  + 对于任意结点而言，从一个节点到该节点的子孙节点的所有路径上包含相同数目的黑节点。
+
++ 红黑树性能比较高，插入删除时间复杂度保持在logn。和AVL相比，要求不是那么严格，它只要求到叶节点的最长路径不超过最短路径的两倍。
+
+  > 场景：插入删除频繁。Nginx用红黑树管理定时器，EPOLL用红黑树管理监听的事件。
+
++ AVL：要求左右子树相差高度不超过一，简单的插入或者删除都会导致树的不平衡需要旋转操作，维护这种高度平衡所付出的代价比从中获得的效率收益还大。
+
+  > 应用：场景中对插入删除不频繁，只是对查找要求较高，AVL更好。 **Windows NT内核中广泛存在**
+
++ 至于普通的二叉搜索树，可能出现瘸腿现象，展现为链表，时间复杂度为 n 。
+
+##### 2.哈希表
+
++ 哈希表是根据关键码的值而直接进行访问的数据结构。数组就是一张哈希表。 关键码是数组的索引下表，通过下表直接访问数组中的元素。
++ 一般哈希表都是用来快速判断一个元素是否出现集合里。
++ 哈希函数，把值直接映射到哈希表上的索引，通过查询索引快速知道值是否在表中。
+
++ **<font color = red>此时为了保证映射出来的索引数值都落在哈希表上，再次对数值做一个取模的操作，保证值可以映射到哈希表上了。</font>** 如果元素数量大于哈希表的大小，会有元素同时映射到同一个索引下表的位置。出现 **「哈希碰撞」**。
+
+解决哈希碰撞的方法：
+
++ 拉链法：
+  + 位置发生了冲突，发生冲突的元素都被存储在链表中。
+  + 拉链法就是要选择适当的哈希表的大小，数组空值会浪费大量内存，链表太长会在查找上浪费太多时间。
++ 线性探测法：
+  + 使用线性探测法，一定要保证tableSize大于dataSize。依靠哈希表中的空位来解决碰撞问题。
+  + 例如冲突的位置，放了A，那么就向下找一个空位放置B的信息。所以要求tableSize一定要大于dataSize ，要不然哈希表上就没有空置的位置来存放冲突的数据了。
 
 
 
@@ -521,9 +616,17 @@ int main(){
 
 ### STL基本介绍
 
+##### 1.介绍一下STL
+
+C++ STL从广义来讲包括了三类:算法，容器和迭代器。
+
++ 算法包括排序，复制等常用算法，以及不同容器特定的算法。 
++ 容器就是数据的存放形式，包括序列式容器和关联式容器
++ 迭代器就是在不暴露容器内部结构的情况下对容器进行遍历。
+
 ##### 1.介绍一下STL 提供六大组件
 
-**1、容器（containers）**：各种数据结构，如vector, list, deque, set, map。从实现角度看，容器是一种 class template。
+**1、容器（containers）**：各种数据的存储方式，如vector, list, deque, set, map。从实现角度看，容器是一种 class template。
 
 **2、算法（algorithms）**：各种常用的算法，如 sort, search, copy, erase…从实现角度来看，算法是一种 function template。
 
@@ -691,7 +794,7 @@ cout << cstr1 << " " << cstr2<< endl;//OK OK
 
 + v.size()：获得容器中有多少元素
 + v.capacity()：获得容器在它已经分配的内存中可以容纳多少元素 
-+ v.resize(Container::size_type n)：强制把容器改为容纳 n个元素 ，不影响capacity
++ v.resize(Container::size_type n)：强制把容器改为容纳 n个元素
   + n 小于size，容器尾部的元素会被销毁
   + n 大于size，新默认构造的元素会添加到容器尾部。 如果 n 大于capacity，在元素加入之前会进行重新分配 
 + v.reserve(Container::size_type n)：强制容器把它的容量改为不小于n，不影响size
@@ -1419,12 +1522,14 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 + epoll 的优点：
 
+  + 文件描述符个数不再受限于1024
+
   + 支持ET边缘触发模式，其余两者只支持LT水平触发模式。
 
   + 不是使用轮询的方式，不会随着fd数目的增加而降低效率。只有活跃可用的fd才会调用callback函数；selet 与 poll 调用时都会对连接进行线性遍历，所以随着FD的增加会造成遍历速度慢的“线性下降性能问题”。
 
   + 使用 mmap共享内存的方式，加速内核与用户空间的消息传递
-
+  
     > 3者都需要内核把fd消息通知给用户空间，如何避免不必要的内存拷贝就显得尤为重要 。 
     >
     > epoll 通过内核 与用户空间 mmap 处于同一块内存实现的 。
@@ -1602,6 +1707,19 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 ---
 
+##### 3.介绍一下有限状态机
+
+表示有限多个状态以及在这些状态之间转移和动作的数学模型。
+
++ 状态机每次从缓冲区读取一行信息，直至读取到 \r\n 表示读取到一行，同时将 \r\n 替换为 \0\0 便于主状态机读取该行，然后再将行起始标志定位到下一行的起始位置。
++ 主状态机有三种状态
+  - CHECK_STATE_REQUESTLINE，解析请求行
+  - CHECK_STATE_HEADER，解析头部信息
+  - CHECK_STATE_CONTENT，解析正文
++ 主状态机的初始状态是CHECK_STATE_REQUESTLINE，parse_request_line()函数中解析请求行，当解析请求行成功时，解析请求行内部函数将主状态转移至下一个状态。
++ 当请求方法为GET时，请求报文没有请求正文，也就是说解析完头部字段后该报文的解析过程就完成了。
++ 解析请求行比较重要的一点是需要保存url，url对应客户端请求的文档。
+
 ##### 3.解析消息的流程process
 
 - 解析消息 process_read
@@ -1627,7 +1745,7 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
   + Reactor模式：利用I/O复用，让主线程调用 epoll_wait 等待 socket 上有数据可读与可写。当epoll_wait 通知主线程后，主线程将 socket 事件放入请求队列，唤醒的线程来处理数据的读写与后续的业务逻辑
   + Proactor模式：利用 异步I/O aio_read 与 aio_write 让内核来进行 socket 的读写操作，等操作完成后内核通知主线程，主线程将唤醒工作线程来处理后续的业务逻辑与事件注册
   + 同步IO模拟Proactor模式： 主线程调用 epoll_wait 等待 socket 上有数据可读与可写。当epoll_wait 通知主线程后，主线程将数据读完之后封装成请求队列中的元素，唤醒工作线程完成后续的逻辑业务与事件注册。
-+ **Reactor模式**
++ **Reactor模式**（主线程监听文件描述符是否有事件发生，数据读写与业务逻辑交给工作线程）
   + 要求主线程 (I/O处理单元) 只负责监听文件描述上是否有事件发生，有则立即将该事件通知工作线程(逻辑单元)，将socket可读可写事件放入请求队列，交给工作线程处理。除此之外，工作线程不做任何实质性的工作。读写数据，连接新的连接，处理客户请求接在工作线程完成。
   + 使用同步 I/O 模型实现的工作流程：
     1. 主线程 在epoll 内核事件表中注册 socket 的读就绪事件
@@ -1637,7 +1755,7 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
     5. 主线程调用 epoll_wait 等待 socket 可写
     6. socket 可写时， epoll_wait 通知主线程，主线程将 socket 可写事件放入请求队列
     7. 睡眠在请求队列中的某个工作线程被唤醒，它往 socket 上写入服务器处理客户请求的结果
-+  **Proactor模式：**
++  **Proactor模式：**（I/O操作交给主线程与内核处理，业务逻辑交给业务逻辑）
   + 将所有I/O操作都交给主线程和内核处理(读写)，工作线程只负责业务逻辑。
   + 使用异步I/O模型实现的工作流程：
     1. 主线程调用 aio_read 函数向内核注册 socket 上的读完成事件，并告诉内核 用户读缓冲区的位置，以及读操作完成时如何通知应用程序，可用信号
@@ -1787,13 +1905,18 @@ for(int i = 1; i < subMatch.size(); ++ i) {
 
 ##### 1.实现负责内容，物理层开发是什么
 
-
-
-
++ 修改5G物理层安全基站项目的调试方式，让项目中数据与MATLAB仿真中的数据比对更加方便。
++ 物理层开发的内容：
+  + 终端需要搜索到服务自己的网络，然后接入网络，这就涉及小区搜索过程和随机接入过程；
+  + 在交互过程中，终端和网络都需将功率调节到合适的大小，以增强覆盖或抑制干扰，这就是功率控制过程***；***
+  + 网络想找到某一个终端，以期与其建立业务连接，这就是寻呼过程；
++ 自己由于对这些不熟悉，所以主要负责调试平台的搭建。
 
 ##### 2.怎么进行修改的
 
-
++ 以往运行就是通过调用run.sh文件，只能通过gdb通过进程来调试，没法可视化debug，所以将shell文件中的命令进行解析，查看运行的可执行文件与传入的参数，以及写入的环境变量
++ 我将环境变量直接写进了系统~/.bashrc中
++ 然后将可执行文件与传入的参数利用VScode来进行运行，将参数传入launch.json中的args中，这样就实现了可视化调试
 
 ##### 3.VScode如何进行debug
 
@@ -2055,15 +2178,15 @@ JSON 语法是 JavaScript 对象表示语法的子集。
 
 ## 九.综合面试
 
-楼层丢鸡蛋
+### 楼层丢鸡蛋
 
-8个赛道，64匹马，要选前4，需要多少轮。
+### 8个赛道，64匹马，要选前4，需要多少轮。
 
-一个检测试剂10分钟检测一位病人，工厂有1000人，最少多少支试剂能10分钟内检测出来哪一位患病？讲出原理（小猪喝水问题的变种
+### 3
 
-1-100，报号，每次剔除奇数位置的人，问这样剔除以后最后剩下的是几号？64
+### 1-100，报号，每次剔除奇数位置的人，问这样剔除以后最后剩下的是几号？64
 
-自己所做邻域的国内外现状、学术界和工业界的状况（因为我研究生期间做的内容比较小众）； 
+### 自己所做邻域的国内外现状、学术界和工业界的状况（因为我研究生期间做的内容比较小众）； 
 
 应聘季自己应聘的优势和劣势； 
 
