--- a/秋招经历/面经1️⃣.md
+++ b/秋招经历/面经1️⃣.md
@@ -1,4 +1,4 @@
-## 一.Linux命令
+# 一.Linux命令
 
 ### 1.调试编译命令
 
@@ -3368,7 +3368,7 @@ GET得看浏览器和服务器限制；POST得看服务器限制。
 ##### 6.==HTTPS是如何保证数据传输的安全，整体的流程是什么? (SSL是怎么工作保证安全的)==
 
 1. Client向Server端发起SSL连接请求;
-2. Server把公钥发送给Client，自己保存着唯一的私钥（公钥放在数字证书中。只要证书是可信的，公钥就是可信的。）
+2. Server把公钥放在数字证书中发送给Client，自己保存着唯一的私钥（公钥放在数字证书中。只要证书是可信的，公钥就是可信的。）
 3. Client用公钥 **将双方通信的对称秘钥进行加密** ，并发送给Server
 4. Server利用私钥进行解密， 得到对称密钥
 5. 进行数据传输使用对称密钥进行传输，加解密速度更快
@@ -3389,7 +3389,7 @@ GET得看浏览器和服务器限制；POST得看服务器限制。
 
   > 摘要算法：MD5，论数据有多大，输出总是128位的散列值。
 
-+ 用「公钥」对数据加密，用「私钥」去解密，是「加密」； 用「私钥」对数据加密，用「公钥」去解密，是「签名」
++ 使用私钥对摘要进行加密就得到数字签名。
 
 ---
 
@@ -3430,11 +3430,52 @@ GET得看浏览器和服务器限制；POST得看服务器限制。
 + HTTPS 采用混合的加密机制
   + 使用非对称密钥加密用于传输对称密钥来保证传输过程的安全性，之后使用对称密钥加密进行通信来保证通信过程的效率。
   + 确保传输安全过程(其实就是rsa原理):
-    1. Client给出协议版本号、一个客户端生成的随机数(Client random)，以及客户端支持的加密方法。
+    1. Client给出协议版本号、一个Client端生成的随机数(Client random)，以及Client支持的加密方法。
     2. Server确认双方使用的加密方法，并给出数字证书、以及一个服务器生成的随机数(Server random)。
-    3. Client确认数字证书有效，然后生成呀一个新的随机数(Premaster secret)，并使用数字证书中的公钥，加密这个随机数，发给Server。
+    3. Client确认数字证书有效，然后生成一个新的随机数(Premaster secret)，并使用数字证书中的公钥，加密这个随机数，发给Server。
     4. Server使用自己的私钥，获取Client发来的随机数(Premaster secret)。
     5. Client和Server根据约定的加密方法，使用前面的三个随机数，生成”对话密钥”(session key)，用来加密接下来的整个对话过程。
+
+---
+
+##### ==7.**HTTPS通信流程的具体过程：**==
+
++  **客户端向服务器端发送链接请求**
+  1. 客户端生成随机数R1发送给服务器端
+  2. 告诉服务器端支持哪些加密算法
++  **服务器端向客户端发送包含公钥与身份信息的数字证书**
+  1. 客户端生成随机数R2
+  2. 从客户端支持的加密算法中选择一种双方都支持的加密算法
+  3. 服务端生成把证书、随机数R2、会话密钥生成算法，一同发给客户端;
+
++ **客户端验证数字证书并拿到公钥**
+  1. 客户端先用CA的公钥解密被加密过后的证书，能解密则证书正确，然后通过证书里提供的摘要算法进行对数据进行摘要，通过自己生成的摘要与服务端发送的摘要比对。
+  2. 获得证书的公钥、会话密钥生成算法、随机数R2
+  3. 生成一个随机数R3
+  4. 根据会话秘钥算法使用R1、R2、R3生成会话秘钥，即后序通信使用的对称密钥
++ **客户端使用公钥加密对称密钥信息发送给服务器**
+  1. 用服务端证书的公钥加密随机数R3并发送给服务端。
++  **服务器端得到会话密钥，可进行后序通话**
+  1. 服务器用私钥解密客户端发过来的随机数R3
+  2. 根据会话秘钥算法使用R1、R2、R3生成对称密钥
+
+----
+
++ 数字证书的作用：
+
+  + 数字签名的作用就是证明公钥的生成者身份是合法Alice即可
+  + Alice将公钥以及部分个人信息发送到某个权威证书颁发机构（CA），CA核实Alice身份后，颁发数字证书，其中包含了Alice的身份信息和公钥数据
+  + Alice将证书发给Bob，Bob就可以通过证书来确定公钥是否属于Alice
+
++ 如何确保数字证书不被伪造：
+
+  + 数字证书是通过CA机构数字签名的，CA机构也生成一套公钥私钥，使用私钥对"Alice身份信息及其公钥数据"这一文件内容进行数字签名，并放到数字证书中，数字证书就相当于文件和数字签名的组合体
+
+  + 在电脑浏览器中默认安装了根证书，根证书中记录了可以信赖的CA机构及其公钥
+
+    > 根证书预先安装在系统中可以杜绝CA机构公钥被伪造的可能
+
+  + 通过CA机构公钥可以验证数字证书中的数字签名，从而确保了数字证书的不可伪伪造
 
 ---
 
