--- a/秋招经历/面经2️⃣.md
+++ b/秋招经历/面经2️⃣.md
@@ -143,7 +143,7 @@
 
 ##### 4.单例模式
 
-+ 确保某一个对象只有一个实例，而且自行实例化并向整个程序提供这个实例。
++ 确保某一个类只有一个实例，而且自行实例化并向整个程序提供这个实例。
 
 + 实现方式：
 
@@ -171,7 +171,7 @@
 
 ##### 5.工厂模式
 
-+ 定义一个创建对象的接口，让其子类自己决定实例化哪一个产品类，工厂模式使其创建过程延迟到子类进行。
++ 定义一个创建对象的接口，让其子类自己决定实例化哪一个类，工厂模式使其创建过程延迟到子类进行。
 +  **简单工厂模式：**
   + 又称静态工厂方法模式，它属于类创建型模式。在简单工厂模式中，可以根据参数的不同返回不同类的实例。
   + 包含的角色：
@@ -218,8 +218,8 @@
 + 隐式类型转换：隐式类型转换是自动执行的，无需显式的操作符。 
   + 函数实参到形参的类型转换、函数返回值类型的自动转换等等。
 + 显示类型转换：
-  + 旧有的C风格的强制类型转换。这些不推荐，在代码中不显眼，容易被忽略， 而且实际上是困难且容易出错的。
-  + explicit关键字：声明为explicit的构造函数不能在隐式转换中使用，但只支持一个参数的构造函数
+  + 旧C风格的强制类型转换。这些不推荐，在代码中不显眼，容易被忽略， 而且实际应用中上是困难且容易出错的。
+  + explicit关键字：声明为explicit的构造函数不能在隐式转换中使用，但只支持修饰一个参数的构造函数，两个及其以上的参数构造函数不支持隐式转换。
   + 四种强制类型转换
 
 ---
@@ -299,15 +299,23 @@
 ##### 13.介绍一下shared_ptr的使用
 
 + shared_ptr是基于引用计数的智能指针，多个使用者操控一个对象。当引用计数为0时内存被释放
+
 + 最安全的分配和使用动态内存的方法是调用`make_shared`函数
+
+  ```c++
+  shared_ptr<int> p1 = make_shared<int>(12);
+  shared_ptr<int> p2(new int (2));
+  ```
+
 + 成员变量与成员函数
-  + 成员变量：计数器，指针
+  + 成员变量：计数器（指针），指针
   + 成员函数：
     + `p.reset()`：如果是唯一指向，则释放对象，p置空
     + `p.reset(q)`：令p指向内置指针q
     + `p.reset(q,d)`：调用d而不是使用delete来释放q
     + `p.get()`：返回内置指针
     + `p.use_count()` :返回计数器的值
+  
 + 使用场景：
   + 有多个使用者共同使用同一个对象，而这个对象没有一个明确的拥有者；
   + 对象的复制操作很费时,同时又需要在函数间传递对象, 我们往往会选择传递指向这个对象的指针来代替传递对象本身
@@ -378,7 +386,6 @@
 
 ```c++
 class Parent;
-
 class Child {
 public:
     weak_ptr<Parent> father;//解决循环引用
@@ -403,7 +410,6 @@ int main() {
         p->son = c;     // 3      c.use_count() == 2 and p.use_count() == 1
         c->father = p;    //  4   c.use_count() == 2 and p.use_count() == 2
  */
-
 ```
 
 + 弱指针用于专门解决shared_ptr循环引用的问题，weak_ptr的存在与否并不影响对象的引用计数器。
@@ -1253,20 +1259,28 @@ setsockopt(sockfd, SOL_SOCKET, SO_REUSEADDR, (const voidvoid *)&opt, sizeof(opt)
 - 客户端接收到ACK确认报文后，connect函数返回文件操作符，回复ACK确认报文，进入established状态
 - 服务器端收到对方的ACK确认报文后，accpet API 函数返回 文件操作符，进入established状态
 
+---
+
 ##### 10. **为什么一个socket可以accept多次？**
 
 - 输入参数 fd 是从 socket， bind， listen 中沿用下来的 socket 句柄值，是在指定的端口处监昕所有的连接请求。
 - 调用 accept() 是从 socket fd 的请求队列抽取第一个连接信息，创建新的同类型 socket 句柄 fd 来进行后续操作。
 - 两个fd 是不同的，所以能 accept 多次
 
+---
+
 ##### 11. **客户端调用close后，连接是断开的流程是什么?**
 
 - 就是四次挥手流程
+
+---
 
 ##### 12. **IO有哪两种操作？**
 
 - 同步IO：必须等待 IO 操作完成后，控制权才返回给用户进程 。 
 - 异步IO：无须等待 IO 操作完成，就将控制权返回给用户进程 。 
+
+---
 
 ##### 13. **网络IO发生时，设计哪些对象与操作？**
 
@@ -1274,6 +1288,8 @@ setsockopt(sockfd, SOL_SOCKET, SO_REUSEADDR, (const voidvoid *)&opt, sizeof(opt)
 - 当一个 read操作发生时，会经历两个阶段:
   - 等待数据准备; 
   - 将数据从内核拷贝到进程中。
+
+---
 
 
 
@@ -1860,7 +1876,19 @@ cond.notify_one();
 
 ---
 
-##### 12.如何设计的自动增长缓冲区
+##### 12.时间堆怎么触发定时器
+
++ 将时间堆定义为全局静态变量`static time_heap time_heaper(10);`，大小为10个
++ 当EPOLL监听到有新的链接来时，创建定时器，设置其回调函数与超时时间(1min)，然后绑定定时器与用户数据，添加到时间堆中
++ 在epoll_wait之前定义一个时间变量，之后会传给epoll_wait，然后调用时间处理函数，来检查堆根结点的时间是否达到，
+  + 如果堆为空，直接返回-1，让epoll进行阻塞等待
+  + 如果非空，则计算剩余时间并返回，传给epoll_wait，这样就不会阻塞等待，会每次都进行查询时间
++ 如果时间到达，则处理定时器回调函数，删除非活动链接socket上的注册事件，并关闭
++ 如果有读写事件发生，则调整该连接对应的定时器，以延迟该连接被关闭的时间
+
+---
+
+##### 13.如何设计的自动增长缓冲区
 
 + 设计了一个buffer类，主要元素有：
   + `vector<char>` 封装的 buffer_
@@ -1871,7 +1899,7 @@ cond.notify_one();
 
 ---
 
-##### 13.如何利用正则表达式来解析HTTP响应的？
+##### 14.如何利用正则表达式来解析HTTP响应的？
 
 ```c++
 // ~ 匹配字符串： |任意非空 任意非空 HTTP/任意非空|   --> 三个group ()  ()  ()
